--- a/src/app/components/auth-session/auth-admin/signup/signup.component.html
+++ b/src/app/components/auth-session/auth-admin/signup/signup.component.html
@@ -79,7 +79,7 @@
               <input
                 class="text-sm bg-gray-100 appearance-none rounded w-full py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
                 id="password"
-                type="text"
+                type="password"
                 placeholder="Password"
                 formControlName="password"
               />
