--- a/src/app/components/dashboard/dashboard-provider/dashboard-index/dashboard-index.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-index/dashboard-index.component.html
@@ -1,5 +1,10 @@
-<h3 class="mb-1 font-normal">Estadísticas</h3>
+<div style="text-align: center;">
+  <h1 class="mb-3 font-medium">PROVEEDORES</h1>	
+  <h2 class="mb-3 font-medium">{{administrator.nombre}} {{administrator.apellido}}</h2>
+  
+</div>
 <div class="grid grid-cols-12 gap-4 lg:gap-8">
+  
 
   <div class="col-span-6 md:col-span-4 border rounded px-4 lg:px-8 py-8 lg:py-16">
 	<img src="https://cdn-icons-png.flaticon.com/512/432/432796.png" alt="Logo" class="center" />
