--- a/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
@@ -2,75 +2,53 @@
 <div>
 	<div style="text-align: center;">
 		<h1 class="mb-3 font-medium">PROVEEDORES</h1>
-		
 	</div>
+
 	<div class="flex justify-between flex-wrap">
 		<h2 class="mb-3 font-medium">LISTA PROVEEDORES</h2> 
 		<button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a7a0d1;"
 		[routerLink]="['/authprovider/signup']" >
 			Agregar 
 		</button>
-	</div>	
+	</div>
+	
 	<div class="table-inside">
-		<table class="order-table table-auto ltMd:responsive">
-			<thead>
-				<tr class="border text-left">
-					<th>
-						<span class="text-gray-800">ID</span>
-					</th>
-					<th>
-						<span class="text-gray-800">NOMBRE</span>
-					</th>
-					<th>
-						<span class="text-gray-800">APELLIDO</span>
-					</th>
-	
-					<th>
-						<span class="text-gray-800">EMAIL</span>
-					</th>
-	
-					<th>
-						<span class="text-gray-800">USERNAME</span>
-					</th>
-					<th class="text-right"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr *ngFor="let order of orders" class="border">
-					<td>
-						<a class="text-primary" href="/">#{{order?.id}}</a>
-					</td>
-					<td>
-						{{order?.orderBy | titlecase }}
-					</td>
-					<td>
-						<span>{{order?.price}}</span>
-					</td>
-					<td>
-						<span>{{order?.created}}</span>
-					</td>
-					<td>
-						<div>
-							{{ order?.status | titlecase }}
-						</div>
-					</td>
-					<td class="text-right">
-						<button class="action_icon__btn" mat-icon-button [matMenuTriggerFor]="menu">
-							<mat-icon>more_vert</mat-icon>
-						</button>
-						<mat-menu #menu="matMenu" xposition="before">
-							<button mat-menu-item>
-								<mat-icon>dialpad</mat-icon>
-								<span>Editar</span>
-							</button>
-							<button mat-menu-item>
-								<mat-icon>delete</mat-icon>
-								<span>Delete</span>
-							</button>
-						</mat-menu>
-					</td>
-				</tr>
-			</tbody>
-		</table>
+		<table mat-table [dataSource]="stringObject" class="mat-elevation-z8" matSort>
+			<ng-container matColumnDef="id">
+			 <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+			 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+		   </ng-container>
+		
+		   <ng-container matColumnDef="nombre">
+			 <th mat-header-cell *matHeaderCellDef mat-sort-header> NOMBRE </th>
+			 <td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+		   </ng-container>
+	   
+		   <ng-container matColumnDef="apellido">
+			 <th mat-header-cell *matHeaderCellDef mat-sort-header> APELLIDO </th>
+			 <td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+		   </ng-container>
+		 
+		   <ng-container matColumnDef="edad">
+			 <th mat-header-cell *matHeaderCellDef mat-sort-header> EDAD </th>
+			 <td mat-cell *matCellDef="let element"> {{element.edad.value}} </td>
+		   </ng-container>
+	   
+		   <ng-container matColumnDef="correoElectronico">
+			 <th mat-header-cell *matHeaderCellDef mat-sort-header> EMAIL </th>
+			 <td mat-cell *matCellDef="let element"> {{element.correoElectronico}} </td>
+		   </ng-container>
+	   
+		   <ng-container matColumnDef="userName">
+			   <th mat-header-cell *matHeaderCellDef mat-sort-header> USERNAME </th>
+			   <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
+		   </ng-container>
+
+		   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+		   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+		 
+		 
+		 </table>
+		 
 	</div>
 </div>
