--- a/src/app/components/auth-session/auth-provider/signup/signup.component.html
+++ b/src/app/components/auth-session/auth-provider/signup/signup.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="login__content flex flex-col justify-center bg-accent" style="background-color: #A4A9A7;">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-        <form>
+        <form [formGroup]="newAdminForm" (ngSubmit)="addNewAdmin(newAdminForm.value)">
           <h1 class="text-2xl font-bold">REGISTRO - PROVEEDOR</h1>
           <div class="mb-4 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="nombre"> Nombre </label>
@@ -15,25 +15,40 @@
               id="nombre"
               type="text"
               placeholder="Nombre"
+              formControlName="nombre"
             />
-            <div class="mb-4 mt-6">
-              <label class="block text-gray-700 text-sm font-semibold mb-2" for="apellido"> Apellido </label>
-              <input
-                class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-                id="apellido"
-                type="text"
-                placeholder="Apellido"
-              />
-              
+          </div>
+          <div class="mb-4 mt-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="apellido"> Apellido </label>
+            <input
+              class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+              id="apellido"
+              type="text"
+              placeholder="Apellido"
+              formControlName="apellido"
+            />
+          </div>  
+          <div class="mb-4 mt-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="edad"> Edad </label>
+            <input
+              class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+              id="edad"
+              type="number" min="21" max="65"
+              placeholder="Edad"
+              formControlName="edad"
+             />
+          </div>
                 
-              <div class="mb-4 mt-6">
-                <label class="block text-gray-700 text-sm font-semibold mb-2" for="email"> Correo Electrónico </label>
-                <input
-                  class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-                  id="email"
-                  type="text"
-                  placeholder="Email "
-                />
+          <div class="mb-4 mt-6">
+            <label class="block text-gray-700 text-sm font-semibold mb-2" for="email"> Correo Electrónico </label>
+            <input
+              class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
+              id="email"
+              type="text"
+              placeholder="Email "
+              formControlName="correoElectronico"
+            />
+          </div>  
           <div class="mb-4 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="username"> Username  </label>
             <input
@@ -41,19 +56,17 @@
               id="username"
               type="text"
               placeholder="Username"
+              formControlName="userName"
             />
           </div>
           <div class="mb-6 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="empresa"> Empresa </label>
-            <input 
-              type="text" 
-              class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
-              list="browsers"
-              placeholder="Empresa"/>
-              <datalist id="browsers">
-                  <option>Empresa 1</option>
-                  <option>Empresa 2</option>
-              </datalist>
+            <select class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10" 
+                id="browsers"
+                formControlName="empresaId">
+                <option value="1" type="number">Empresa 1</option>
+                <option value="2" type="number">Empresa 2</option>
+            </select>
           </div>
           <div class="mb-6 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" for="password"> Password </label>
@@ -62,6 +75,7 @@
               id="password"
               type="password"
               placeholder="Password"
+              formControlName="password"
             />
           </div>
           <div class="flex w-full mt-6">
@@ -73,6 +87,7 @@
               Registrar
             </button>
           </div>
+        </form>
       </div>
     </div>
   </div>
