--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -14,22 +14,21 @@
       <div class="flex flex-col border ltLg:responsive">
         <div class="flex items-center p-4 border-b hover:bg-blue-100">
           <div class="w-6/12 font-medium"><div class="pl-16 ml-3">Producto</div></div>
-          <div class="w-2/12 font-medium">Categoria</div>
+          <div class="w-2/12 font-medium">Marca</div>
           <div class="w-2/12 font-medium text-center">Precio</div>
-          <div class="w-2/12 font-medium">Tallas</div>
           <div class="w-1/12"></div>
         </div>
         <div class="flex items-center p-4 border-b hover:bg-blue-100" *ngFor="let product of products | slice: 0:9">
           <div class="w-6/12">
             <a href="" class="flex hover:text-primary">
-              <div class="max-h-16 w-16 flex-none mr-3 border" *ngIf="product?.images">
+              <!-- <div class="max-h-16 w-16 flex-none mr-3 border" *ngIf="product?.images">
                 <img [src]="product?.images[0]" alt="img">
-              </div>
-              <h6 class="flex-auto">{{ product?.name }}</h6>
+              </div> -->
+              <h6 class="flex-auto">{{ product.nombreProducto }}</h6>
             </a>
           </div>
-          <div class="w-2/12">{{product?.category}}</div>
-          <div class="w-2/12 text-center">${{product?.price}}</div>
+          <div class="w-2/12">{{product.marca}}</div>
+          <div class="w-2/12 text-center">${{product.precio}}</div>
           <div class="w-2/12">
             <div class="flex items-center">
               {{product?.tallas}}
