agregar detalle de producto

--- a/src/app/components/app-home/client-home/home-products/home-products.component.html
+++ b/src/app/components/app-home/client-home/home-products/home-products.component.html
@@ -26,7 +26,7 @@
                {{ product.tallas }}
             </div>
             <div class="flex-1 text-center">
-              <a [routerLink]="['/products', product.id]" mat-raised-button color="warn" class="px-4">Información del producto</a>
+              <a [routerLink]="['/products', product.idProducto]" mat-raised-button color="warn" class="px-4">Información del producto</a>
             </div>
           </mat-card-actions>
         </mat-card>
