--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -16,6 +16,7 @@
           <div class="w-6/12 font-medium"><div class="pl-16 ml-3">Producto</div></div>
           <div class="w-2/12 font-medium">Marca</div>
           <div class="w-2/12 font-medium text-center">Precio</div>
+          <div class="w-2/12 font-medium text-center">Stock</div>
           <div class="w-1/12"></div>
         </div>
         <div class="flex items-center p-4 border-b hover:bg-blue-100" *ngFor="let product of products | slice: 0:9">
@@ -30,9 +31,7 @@
           <div class="w-2/12">{{product.marca}}</div>
           <div class="w-2/12 text-center">${{product.precio}}</div>
           <div class="w-2/12">
-            <div class="flex items-center">
-              {{product?.tallas}}
-            </div>
+            {{product.stock}}
           </div>
         </div>
       </div>
