--- a/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
@@ -66,7 +66,7 @@
 								<mat-icon>dialpad</mat-icon>
 								<span>Editar</span>
 							</button>
-							<button mat-menu-item>
+							<button mat-menu-item (click)="onDelete()">
 								<mat-icon>delete</mat-icon>
 								<span>Eliminar</span>
 							</button>
