--- a/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
+++ b/src/app/components/dashboard/dashboard-provider/dashboard-products/dashboard-products.component.html
@@ -4,7 +4,7 @@
   </div>
   <div>
     <div class="flex justify-between flex-wrap">
-      <h2 class="mb-3 font-medium">LISTA PRODUTOS</h2> 
+      <h2 class="mb-3 font-medium">LISTA PRODUCTOS</h2> 
       <button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a096ce;"
       [routerLink]="['/addproduct']" >
         Agregar Producto
@@ -25,7 +25,7 @@
               <!-- <div class="max-h-16 w-16 flex-none mr-3 border" *ngIf="product?.images">
                 <img [src]="product?.images[0]" alt="img">
               </div> -->
-              <h6 class="flex-auto">{{ product.nombreProducto }}</h6>
+              <h3 class="flex-auto">{{ product.nombreProducto }}</h3>
             </a>
           </div>
           <div class="w-2/12">{{product.marca}}</div>
