--- a/src/app/components/dashboard/dashboard-admin/dashboard-inactive-admin/dashboard-inactive-admin.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-inactive-admin/dashboard-inactive-admin.component.html
@@ -1,15 +1,10 @@
 
 <div>
 	<div style="text-align: center;">
-		<h1 class="mb-3 font-medium">PROVEEDORES</h1>
-		
+		<h1 class="mb-3 font-medium">ADMINISTRADOR</h1>
 	</div>
 	<div class="flex justify-between flex-wrap">
-		<h2 class="mb-3 font-medium">LISTA PROVEEDORES ACTIVOS</h2> 
-		<button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a7a0d1;"
-		[routerLink]="['/authprovider/signup']" >
-			Agregar 
-		</button>
+		<h2 class="mb-3 font-medium">LISTA ADMINISTRADORES INACTIVOS</h2> 
 	</div>	
 	<div class="table-inside">
 		<table class="order-table table-auto ltMd:responsive">
@@ -66,7 +61,7 @@
 								<mat-icon>dialpad</mat-icon>
 								<span>Editar</span>
 							</button>
-							<button mat-menu-item (click)="onDelete()">
+							<button mat-menu-item>
 								<mat-icon>delete</mat-icon>
 								<span>Eliminar</span>
 							</button>
