--- a/src/app/components/dashboard/dashboard-admin/dashboard-inactive-providers/dashboard-inactive-providers.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-inactive-providers/dashboard-inactive-providers.component.html
@@ -5,11 +5,7 @@
 		
 	</div>
 	<div class="flex justify-between flex-wrap">
-		<h2 class="mb-3 font-medium">LISTA PROVEEDORES ACTIVOS</h2> 
-		<button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a7a0d1;"
-		[routerLink]="['/authprovider/signup']" >
-			Agregar 
-		</button>
+		<h2 class="mb-3 font-medium">LISTA PROVEEDORES INACTIVOS</h2> 
 	</div>	
 	<div class="table-inside">
 		<table class="order-table table-auto ltMd:responsive">
