--- a/src/app/components/dashboard/dashboard-admin/dashboard-layout/dashboard-layout.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-layout/dashboard-layout.component.html
@@ -19,16 +19,24 @@
                 <div class="rounded-md border overflow-hidden h-full">
                   <div class="user text-center py-10 px-5" style="background-color: #2E9084;">
                     <img class="ml-auto mr-auto" src="https://cdn-icons-png.flaticon.com/128/1177/1177568.png" alt="admin" style="width:50px;" />
-                    <h4 class="text-white mt-3">ADMINISTRADOR</h4>
+                    <h2 class="text-white mt-3">ADMINISTRADOR</h2>
                   </div>
                   <mat-nav-list class="_sidenav">
                     <a
                       mat-list-item
-                      routerLink="/admindashboard"
+                      routerLink="/admindashboard/admins"
                       [routerLinkActiveOptions]="{ exact: true }"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
-                      ><mat-icon class="mr-2">how_to_reg</mat-icon> Lista de Administradores</a
+                      ><mat-icon class="mr-2">how_to_reg</mat-icon> Lista de Administradores activos</a
+                    >
+                    <a
+                      mat-list-item
+                      routerLink="/admindashboard/inactiveadmins"
+                      [routerLinkActiveOptions]="{ exact: true }"
+                      routerLinkActive="bg-gray-200"
+                      class="font-semibold text-gray-500 hover:text-primary"
+                      ><mat-icon class="mr-2">warning</mat-icon> Lista de Administradores inactivos</a
                     >
                     <a
                       mat-list-item
@@ -43,7 +51,14 @@
                       routerLink="/admindashboard/providers"
                       routerLinkActive="bg-gray-200"
                       class="font-semibold text-gray-500 hover:text-primary"
-                      ><mat-icon class="mr-2">article</mat-icon> Lista de proveedores</a
+                      ><mat-icon class="mr-2">article</mat-icon> Lista de proveedores activos</a
+                    >
+                    <a
+                      mat-list-item
+                      routerLink="/admindashboard/inactiveproviders"
+                      routerLinkActive="bg-gray-200"
+                      class="font-semibold text-gray-500 hover:text-primary"
+                      ><mat-icon class="mr-2">article</mat-icon> Lista de proveedores inactivos</a
                     >
                     <a
                     mat-list-item
