--- a/src/app/components/auth-session/auth-provider/login/login.component.html
+++ b/src/app/components/auth-session/auth-provider/login/login.component.html
@@ -10,12 +10,12 @@
           <br>
           <h1 class="text-2xl font-bold" style="font-size: 25px; text-align: center;">LOGIN - ADMINISTRADOR</h1>
           <div class="mb-4 mt-6">
-            <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="username"style="font-size: 15px;"> Usuario </label>
+            <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="correo"style="font-size: 15px;"> Correo </label>
             <input
               class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-              name="username" id="username" formControlName="username"
+              name="correo" id="correo" formControlName="correo"
               type="text"
-              placeholder="usuario" style="font-size: 15px;"
+              placeholder="correo" style="font-size: 15px;"
             />
           </div>
           <div class="mb-6 mt-6">
