--- a/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
@@ -12,68 +12,43 @@
 		</button>
 	</div>	
 	<div class="table-inside">
-		<table class="order-table table-auto ltMd:responsive">
-			<thead>
-				<tr class="border text-left">
-					<th>
-						<span class="text-gray-800">ID</span>
-					</th>
-					<th>
-						<span class="text-gray-800">NOMBRE</span>
-					</th>
-					<th>
-						<span class="text-gray-800">APELLIDO</span>
-					</th>
-					<th>
-						<span class="text-gray-800">EMAIL</span>
-					</th>
-					<th>
-						<span class="text-gray-800">EDAD</span>
-					</th>
-					<th>
-						<span class="text-gray-800">USERNAME</span>
-					</th>
-					<th class="text-right"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr *ngFor="let admin of admins" class="border">
-					<td>
-						<a class="text-primary" href="/">#{{admin?.id}}</a>
-					</td>
-					<td>
-						{{admin?.nombre}}
-					</td>
-					<td>
-						<span>{{admin?.apellido}}</span>
-					</td>
-					<td>
-						<span>{{admin?.correoElectronico}}</span>
-					</td>
-					<td>
-						<span>{{admin?.edad}}</span>
-					</td>
-					<td>
-						<span>{{admin?.userName}}</span>
-					</td>
-					
-					<td class="text-right">
-						<button class="action_icon__btn" mat-icon-button [matMenuTriggerFor]="menu">
-							<mat-icon>more_vert</mat-icon>
-						</button>
-						<mat-menu #menu="matMenu" xposition="before">
-							<button mat-menu-item>
-								<mat-icon>dialpad</mat-icon>
-								<span>Editar</span>
-							</button>
-							<button mat-menu-item (click)="onDelete()">
-								<mat-icon>delete</mat-icon>
-								<span>Eliminar</span>
-							</button>
-						</mat-menu>
-					</td>
-				</tr>
-			</tbody>
+		<mat-form-field>
+			<mat-label>Filtro</mat-label>
+			<input matInput (keyup)="applyFilter($event)"  #input>
+		</mat-form-field>
+		<table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)"  class="mat-elevation-z8">
+			<ng-container matColumnDef="id">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id"> ID </th>
+				<td mat-cell *matCellDef="let element"> {{element.id}} </td>
+		  	</ng-container>
+	   
+		  	<ng-container matColumnDef="nombre">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by nombre"> Nombre </th>
+				<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
+		  	</ng-container>
+	  
+		  	<ng-container matColumnDef="apellido">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by apellido"> Apellido </th>
+				<td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
+		  	</ng-container>
+		
+		  	<ng-container matColumnDef="correo" >
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by correo"> Correo </th>
+				<td mat-cell *matCellDef="let element"> {{element.correoElectronico}} </td>
+		 	 </ng-container>
+	  
+		  	<ng-container matColumnDef="edad">
+				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number"> Edad </th>
+				<td mat-cell *matCellDef="let element"> {{element.edad}} </td>
+		  	</ng-container>
+	  
+		  	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    	  	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+		  	<tr class="mat-row" *matNoDataRow>
+				<td class="mat-cell" colspan="4">No se encontro "{{input.value}}"</td>
+		  	</tr>
 		</table>
+		<mat-paginator [pageSizeOptions]="[5, 10, 15, 20, 25]" showFirstLastButtons></mat-paginator>
 	</div>
 </div>
