--- a/src/app/components/product/product-list/product-list.component.html
+++ b/src/app/components/product/product-list/product-list.component.html
@@ -13,14 +13,18 @@
           <div class="mt-3 flex">
             <input
               type="text"
-              name="pruductName" id="pruductName" formControlName="pruductName"
+              name="pruductName"
+              id="pruductName"
+              (input)="changeInput()"
+              formControlName="pruductName"
               placeholder="Búsqueda por nombre"
               class="flex-1 w-full sm:text-sm lg:text-xl border-gray-300 rounded-l-md py-3 px-6"
               required
             />
-            <button disabled="true" class="bg-primary w-24 rounded-r-md"><mat-icon class="leading-8">search</mat-icon></button>
+            <button (click)="aplicarFiltro()" class="bg-primary w-24 rounded-r-md"><mat-icon class="leading-8">search</mat-icon></button>
           </div>
           <div class="grid grid-cols-6 gap-6 mt-4">
+            <!--
             <div class="col-span-6 sm:col-span-3">
               <select name="color" id="color" formControlName="color"
                 class="mt-1 block w-full py-2 px-3 border border-gray-300 bg-white rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
@@ -39,6 +43,7 @@
             <div class="col-span-6">
               <button mat-flat-button color="accent">Aplicar Filtro</button>
             </div>
+            -->
           </div>
         </form>
       </mat-expansion-panel>
@@ -48,7 +53,7 @@
 <div class="ll-products-area mb-24">
   <div class="container">
     <div class="grid grid-cols-12 gap-6 xxl:gap-8" *ngIf="isLoaded">
-      <div *ngFor="let product of products" class="col-span-12 md:col-span-6 xl:col-span-4">
+      <div *ngFor="let product of obsProducts | async" class="col-span-12 md:col-span-6 xl:col-span-4">
         <mat-card class="ll-product">
           <img mat-card-image [src]="product?.image" alt="{{ product.nombreProducto }}" style="width: 550px; height:250px;; margin: 0 0 20px" />
           <mat-card-content class="flex">
@@ -72,12 +77,14 @@
           </mat-card-actions>
         </mat-card>
       </div>
+
     </div>
+    <mat-paginator [pageSizeOptions]="[3, 6, 12, 24]"></mat-paginator>
     <div *ngIf="!isLoaded">
-      <ngx-skeleton-loader 
+      <ngx-skeleton-loader
         count="9"
         appearance="circle"
-        [theme]="{ 
+        [theme]="{
           'border-radius': '5px',
           height: '280px',
           width: 'calc(33% - 10px)'
@@ -90,7 +97,7 @@
 <div class="ll-find-more mt-10 mb-36">
   <div class="container rounded-md">
     <h2 class="ll-find-more__heading" style="text-align:center">No encuentras algo que guste? Tenemos los siguientes productos en oferta</h2> <br>
-    
+
       <div class="grid grid-cols-12 gap-6 xxl:gap-8" *ngIf="isLoaded">
         <div *ngFor="let product of products" class="col-span-12 md:col-span-6 xl:col-span-4">
           <mat-card class="ll-product">
@@ -117,7 +124,7 @@
           </mat-card>
         </div>
       </div>
-     
-  
+
+
   </div>
 </div>
