--- a/src/app/components/auth-session/auth-client/login/login.component.html
+++ b/src/app/components/auth-session/auth-client/login/login.component.html
@@ -1,39 +1,41 @@
 <div class="login__page" [style.background-image]="'url(https://fondosmil.com/fondo/62090.jpg)'">
   <div class="login__row min-h-screen">
     <div class="login__hero flex flex-col justify-center items-center py-10 px-4 sm:px-8 xl:px-20 text-white">
-      <a  class="w-48 inline-block"><img src="assets/images/logo_trendy.png" alt="Trendy" /></a>
+      <a  class="w-48 inline-block"><img src="assets/logo_trendy.png" alt="Trendy" /></a>
       <h2 class="text-center mt-6">BIENVENIDO A TRENDY STORE</h2>
     </div>
     <div class="login__content p-4 sm:p-8 flex flex-col justify-center bg-accent" style="background-color: #CCAA41;">
       <div class="login w-full max-w-xl rounded-md mx-auto border p-4 sm:p-8 xl:p-20">
-        <form>
+        <form [formGroup]="userForm" (ngSubmit)="login()">
           <h1 class="text-2xl font-bold">LOGIN - CLIENTE</h1>
           <div class="mb-4 mt-6">
             <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="username"> Usuario </label>
             <input
               class="text-sm appearance-none rounded w-full py-2 px-3 text-gray-700 bg-gray-100 leading-tight focus:outline-none focus:shadow-outline h-10"
-              id="username"
+              id="correo"
               type="text"
-              placeholder="usuario"
+              placeholder="correo"
+              formControlName="correo"
             />
           </div>
           <div class="mb-6 mt-6">
-            <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="password"> Password </label>
+            <label class="block text-gray-700 text-sm font-semibold mb-2" htmlFor="password" style="font-size: 15px;"> Password </label>
             <input
               class="text-sm bg-gray-100 appearance-none rounded w-250 py-2 px-3 text-gray-700 mb-1 leading-tight focus:outline-none focus:shadow-outline h-10"
-              id="password"
-              type="password"
-              placeholder="password"
-            
+              name="password" id="password" formControlName="password"
+              type="password" placeholder="password" style="font-size: 15px;"
+              [type]="hide ? 'password':'text'"
             /> 
-            
-            
+            <i class="material-icons" matSuffix (click)="hide = !hide">
+              {{hide ? 'visibility': 'visibility_off'}} 
+             </i>
+            <br>
           </div>
          
           <div class="flex w-full mt-6">
             <button
               class="w-full bg-gray-800 hover:bg-grey-900 text-white text-sm py-2 px-4 font-semibold rounded focus:outline-none focus:shadow-outline h-10"
-              type="button"
+              type="submit"
               
             >
               Iniciar sesión
@@ -45,6 +47,7 @@
     </div>
   </div>
 </div>
+
 
 
 
