--- a/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
+++ b/src/app/components/dashboard/dashboard-admin/dashboard-providers/dashboard-providers.component.html
@@ -2,15 +2,15 @@
 <div>
 	<div style="text-align: center;">
 		<h1 class="mb-3 font-medium">PROVEEDORES</h1>
-		
+
 	</div>
 	<div class="flex justify-between flex-wrap">
-		<h2 class="mb-3 font-medium">LISTA PROVEEDORES ACTIVOS</h2> 
+		<h2 class="mb-3 font-medium">LISTA PROVEEDORES ACTIVOS</h2>
 		<button class=" text-black text-sm py-2 px-4 rounded font-semi bold focus:outline-none focus:shadow-outline h-10" type="button" style="background-color: #a7a0d1;"
 		[routerLink]="['/authprovider/signup']" >
-			Agregar 
+			Agregar
 		</button>
-	</div>	
+	</div>
 	<div class="table-inside">
 		<mat-form-field>
 			<mat-label>Filtro</mat-label>
@@ -21,27 +21,44 @@
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by id"> ID </th>
 				<td mat-cell *matCellDef="let element"> {{element.id}} </td>
 		  	</ng-container>
-	   
+
 		  	<ng-container matColumnDef="nombre">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by nombre"> Nombre </th>
 				<td mat-cell *matCellDef="let element"> {{element.nombre}} </td>
 		  	</ng-container>
-	  
+
 		  	<ng-container matColumnDef="apellido">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by apellido"> Apellido </th>
 				<td mat-cell *matCellDef="let element"> {{element.apellido}} </td>
 		  	</ng-container>
-		
+
 		  	<ng-container matColumnDef="correo" >
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by correo"> Correo </th>
 				<td mat-cell *matCellDef="let element"> {{element.correoElectronico}} </td>
 		 	 </ng-container>
-	  
+
 		  	<ng-container matColumnDef="edad">
 				<th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by number"> Edad </th>
 				<td mat-cell *matCellDef="let element"> {{element.edad}} </td>
 		  	</ng-container>
-	  
+        <ng-container matColumnDef="opciones">
+          <th mat-header-cell *matHeaderCellDef> Opciones </th>
+          <td mat-cell *matCellDef="let element">
+            <div class="text-right">
+              <button class="action_icon__btn" mat-icon-button [matMenuTriggerFor]="menu">
+                <mat-icon>more_vert</mat-icon>
+              </button>
+              <mat-menu #menu="matMenu" xposition="before">
+                <button mat-menu-item (click)="deleteProviderNotification(element?.id)">
+                  <mat-icon>delete</mat-icon>
+                  <span>Eliminar proveedor</span>
+                </button>
+
+              </mat-menu>
+            </div>
+          </td>
+        </ng-container>
+
 		  	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     	  	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
